--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carregando...</title>
+    <title>Iniciando Projeto Eco</title>
     <link rel="stylesheet" href="loader.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -53,7 +53,7 @@
                 <span class="shadow"></span>
             </div>
             
-            <!-- Texto da Fotossíntese -->
+    
             <div class="text-container">
                 <p class="loading-text">Carregando</p>
             </div>
