--- a/principal.html
+++ b/principal.html
@@ -11,7 +11,7 @@
     <nav class="navbar">
         <div class="nav-content">
             <div class="logo">
-                <span class="logo-icon">🌿</span>
+                <span class="logo-icon">🌳</span>
                 <span class="logo-text">Eco Jardim</span>
             </div>
             <div class="nav-links">
@@ -175,8 +175,8 @@
 
     <div id="modal" class="modal">
         <div class="modal-content">
-            <span class="close-modal">&times;</span>
             <div id="modal-content"></div>
+            <button id="close-modal" style="margin-top: 1rem;">Fechar</button>
         </div>
     </div>
 
